test/cli/test-validating-admission-policy/with-namespaceObject-3/binding.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: validate-namespace-binding
spec:
  policyName: validate-namespace-policy
  matchResources:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["namespaces"]
