test/cli/test-validating-admission-policy/with-namespaceObject-3/policy.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: validate-namespace-policy
spec:
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["namespaces"]
  validations:
  - expression: "object.metadata.name.startsWith('valid-')"
    message: "Namespace name must start with 'valid-'."
